<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.wargamer2010</groupId>
    <artifactId>SignShop</artifactId>
    <version>2.11.3</version>
    <packaging>jar</packaging>

    <name>Signshop</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>8</release>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>vault-repo</id>
            <url>http://nexus.hc.to/content/repositories/pub_releases</url>
        </repository>
        <repository>
            <id>njol-repo</id>
            <url>http://maven.njol.ch/repo/</url>
        </repository>
        <repository>
            <id>worldedit-worldguard-repo</id>
            <url>http://maven.sk89q.com/repo/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>ess-repo</id>
            <url>http://repo.ess3.net/content/groups/essentials</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.14.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.milkbowl.vault</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>ch.njol</groupId>
            <artifactId>skript</artifactId>
            <version>2.0.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.8.3</version>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-legacy</artifactId>
            <version>7.0.0-20181008.132144-4</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>bukkit</artifactId>
                </exclusion>
                <!--<exclusion>-->
                <!--<groupId>com.sk89q.worldedit</groupId>-->
                <!--<artifactId>worldedit-bukkit</artifactId>-->
                <!--</exclusion>-->
                <exclusion>
                    <groupId>com.sk89q</groupId>
                    <artifactId>commandbook</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.bstats</groupId>
                    <artifactId>bstats-bukkit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-core</artifactId>
            <version>7.0.0-20181010.132528-6</version>
        </dependency>
        <dependency>
            <groupId>com.github.TechFortress</groupId>
            <artifactId>GriefPrevention</artifactId>
            <version>16.7.1</version>
        </dependency>
        <dependency>
            <groupId>com.github.derwisch</groupId>
            <artifactId>loreLocks</artifactId>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/LoreLocks.jar</systemPath>
            <version>1.0.0</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>net.sacredlabyrinth.Phaed</groupId>-->
<!--            <artifactId>PreciousStones</artifactId>-->
<!--            <scope>system</scope>-->
<!--            <systemPath>${project.basedir}/libs/PreciousStones-1.12.jar</systemPath>-->
<!--            <version>1.12</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.bekvon.bukkit</groupId>-->
<!--            <artifactId>residence</artifactId>-->
<!--            <scope>system</scope>-->
<!--            <systemPath>${project.basedir}/libs/Residence.jar</systemPath>-->
<!--            <version>1.0.0</version>-->
<!--        </dependency>-->
        <dependency>
            <!-- on the Ess Repo -->
            <groupId>net.ess3</groupId>
            <artifactId>Essentials</artifactId>
            <version>2.13.1</version> <!-- Stable version -->
            <scope>provided</scope>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>com.earth2me</groupId>-->
<!--            <artifactId>essentials</artifactId>-->
<!--            <scope>system</scope>-->
<!--            <systemPath>${project.basedir}/libs/EssentialsX-2.15.0.55.jar</systemPath>-->
<!--            <version>2.15.0.55</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>org.dynmap</groupId>
            <artifactId>dynmap</artifactId>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/Dynmap-3.0-beta-3-spigot.jar</systemPath>
            <version>3.0</version>
        </dependency>
        <dependency>
            <groupId>com.griefcraft</groupId>
            <artifactId>lwc</artifactId>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/Modern-LWC-2.1.2.jar</systemPath>
            <version>2.1.2</version>
        </dependency>
        <dependency>
            <groupId>com.palmergames.bukkit</groupId>
            <artifactId>towny</artifactId>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/Towny.jar</systemPath>
            <version>1.0.0</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>com.worldcretornica</groupId>-->
<!--            <artifactId>plotme_core</artifactId>-->
<!--            <scope>system</scope>-->
<!--            <systemPath>${project.basedir}/libs/PlotMe-Core.jar</systemPath>-->
<!--            <version>1.0.0</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>com.kellerkindt</groupId>
            <artifactId>scs</artifactId>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/ShowCaseStandalone.jar</systemPath>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.yi.acru.bukkit</groupId>
            <artifactId>Lockette</artifactId>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/Lockette.jar</systemPath>
            <version>0.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.flobi</groupId>
            <artifactId>WhatIsIt</artifactId>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/WhatIsIt.jar</systemPath>
            <version>0.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.getspout</groupId>
            <artifactId>spoutapi</artifactId>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/spoutcraftplugin-1.6.4-b4.jar</systemPath>
            <version>0.0.1</version>
        </dependency>
        <dependency>
            <groupId>me.muizers</groupId>
            <artifactId>Notifications</artifactId>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/Notifications.jar</systemPath>
            <version>0.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.25.2</version>
        </dependency>
    </dependencies>
</project>
